--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
     "helmet": "^4.4.1",
+    "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.2.5"
   },
   "devDependencies": {
